fixed text overflow

--- a/style.css
+++ b/style.css
@@ -63,18 +63,21 @@ button:hover {
 
 @media (min-width: 320px) and (max-width: 800px) {
    body {
-    max-width: 400px;
+    width: 100%;
    }
     .quiz-container {
-   max-width: 400px;
+   width: 80%;
+   margin: 0 auto;
    }
    h1 {
     margin-left: 5rem;
    }
  
-   }
+   
    h2 {
-    font-size: large;
+    width: 100%;
     margin: 1rem 0;
    }
-}
+
+   
+   }
